testsuite/tests/properties/invalid_enum_dflt_val/no_such_value.lkt
import common

@with_default(d) enum MyEnum {
    case a, b, c
}
